Fixed visibility admin`s page  Changes to be committed: 	modified:   src/js/components/adminAccount/index.js 	modified:   src/js/components/userPreferences/index.js 	modified:   src/js/constants/user.js 	modified:   src/js/constants/visibility.js 	modified:   src/js/main.js 	modified:   src/js/reducers/adminAccount.js 	modified:   src/js/reducers/userPreferences.js 	modified:   src/stylus/assets/components/AdminAccountComponent.styl 	modified:   src/stylus/assets/components/userPreferencesComponent.styl

--- a/client/src/stylus/assets/components/AdminAccountComponent.styl
+++ b/client/src/stylus/assets/components/AdminAccountComponent.styl
@@ -1,98 +1,94 @@
-.adminAccount-component_wrapper
+.admin-acc-component_wrapper
   background main_light_grey_color
   opacity 0.8
-  width 80%
-  margin-left auto
-  display table
 
-  .adminAccount-area_wrapper
-    background main_light_grey_color
-    justify-content center
-    display table-cell
-    border-width 0 0 2px 0
-    border-color main_middle_grey_color
-    border-style solid
-    width 80%
-    .name_wrapper
+  .admin-acc-block-component-wrapper
+    margin-left auto
+    display table
 
+    .adminAccount-area_wrapper
+      background main_light_grey_color
+      justify-content center
+      display table-cell
+      border-width 0 0 2px 0
+      border-color main_middle_grey_color
+      border-style solid
+      width 80%
+      .name_wrapper
 
-      .name
+        .name
+          margin-left auto
 
-        margin-left auto
-
-        p
-          display block
-          padding-bottom 0.2em
-          font-weight bold
-
-    .adminAccount_wrapper
-      width 90%
-      display block
-      .submitButton
-        width 100%
-        text-align: center
-        padding-right 20%
-        padding-top 1em
-        input[type="button"]
-          margin-bottom 1.5em
-          outline: none // удаляет обводку в браузерах хром(желтая) и сафари(синяя)
-          border: 1px solid main_dark_grey_color //цвет рамки
-          background: #ffffff
-          text-align center
-          font-size: 1em
-      .checkbox_wrapper
-        padding-top 1em
-        .name_block
-          display inline-block
-          width 80%
-        .checkbox_block
-          display inline-block
-          width 20%
-      .input_wrapper
-
-        width 50%
-        padding-top 2em
-        .name_block
-          display inline-block
-          padding-right 1em
-          width 30%
-          text-align center
           p
+            display block
+            padding-bottom 0.2em
+            font-weight bold
 
+      .adminAccount_wrapper
+        width 90%
+        display block
+        .submitButton
+          width 100%
+          text-align: center
+          padding-right 20%
+          padding-top 1em
+          input[type="button"]
+            margin-bottom 1.5em
+            outline: none // удаляет обводку в браузерах хром(желтая) и сафари(синяя)
+            border: 1px solid main_dark_grey_color //цвет рамки
+            background: #ffffff
+            text-align center
+            font-size: 1em
+        .checkbox_wrapper
+          padding-top 1em
+          .name_block
+            display inline-block
+            width 80%
+          .checkbox_block
+            display inline-block
+            width 20%
+        .input_wrapper
 
-          padding-bottom 0.2em
-          font-weight bold
-        .input_block
-          width 60%
-          display inline-block
-          text-align: right
-          //padding-left 50%
-          input[type="text"]
-
-
-
-           width 10em
-           border: 2px solid main_light_grey_color //цвет рамки
-           border-width 2px 0px 2px 0px
-           border-radius: 0 //закругление углов (общее)  //закругление углов (Google Chrome)  //закругление углов (FireFox)
-           -khtml-border-radius 0 //закругление углов (Safari)
-
-           background: #ffffff !important // желательно прописывать, так как в Chrome при сохранных данных оно может быть желтым
-           outline: none // удаляет обводку в браузерах хром(желтая) и сафари(синяя)
-           height: 1.4em // высота на свое усмотрение
-           color: black //цвет шрифта в обычном состоянии
-           font-size: 1.3em // Размер шрифта
-           &:focus
-             border-bottom 2px solid main_dark_grey_color
-
-  .admined_user_wrapper
-    width 20%
-    display table-cell
-    .name_wrapper
-          .name
-            margin-left auto
+          width 50%
+          padding-top 2em
+          .name_block
+            display inline-block
+            padding-right 1em
+            width 30%
+            text-align center
             p
-              display block
-              padding-bottom 0.2em
-              font-weight bold
+
+            padding-bottom 0.2em
+            font-weight bold
+          .input_block
+            width 60%
+            display inline-block
+            text-align: right
+            //padding-left 50%
+            input[type="text"]
+
+              width 10em
+              border: 2px solid main_light_grey_color //цвет рамки
+              border-width 2px 0px 2px 0px
+              border-radius: 0 //закругление углов (общее)  //закругление углов (Google Chrome)  //закругление углов (FireFox)
+              -khtml-border-radius 0 //закругление углов (Safari)
+
+              background: #ffffff !important // желательно прописывать, так как в Chrome при сохранных данных оно может быть желтым
+              outline: none // удаляет обводку в браузерах хром(желтая) и сафари(синяя)
+              height: 1.4em // высота на свое усмотрение
+              color: black //цвет шрифта в обычном состоянии
+              font-size: 1.3em // Размер шрифта
+              &:focus
+                border-bottom 2px solid main_dark_grey_color
+
+    .admined_user_wrapper
+      width 20%
+      display table-cell
+      .name_wrapper
+        .name
+          margin-left auto
+          p
+            display block
+            padding-bottom 0.2em
+            font-weight bold
 
