--- a/client/src/stylus/assets/components/userPreferencesComponent.styl
+++ b/client/src/stylus/assets/components/userPreferencesComponent.styl
@@ -1,7 +1,6 @@
 .userPreferences-component_wrapper
   background main_light_grey_color
   opacity 0.8
-  width 70%
   margin-left auto
 
   .UserPreferences-area_wrapper
